fixed gap between productCards in mobiles

--- a/src/component/UI/Card/CartCard/CartCard.module.css
+++ b/src/component/UI/Card/CartCard/CartCard.module.css
@@ -108,8 +108,11 @@ input[type="number"] {
 @media screen and (max-width: 700px) {
   .Container {
     flex-direction: column;
-    gap: 2rem;
     align-items: stretch;
+  }
+
+  .ButtonsContainer {
+    margin: 2rem 0;
   }
 
   .PriceAndDelete {
