--- a/src/containers/Discover/Discover.module.css
+++ b/src/containers/Discover/Discover.module.css
@@ -7,7 +7,7 @@
   align-items: center;
 
   height: min-content;
-  padding: 1rem 1rem;
+  padding: 1rem 0;
   padding-top: 3rem;
 }
 
