--- a/src/containers/TopSellers/TopSellers.module.css
+++ b/src/containers/TopSellers/TopSellers.module.css
@@ -6,7 +6,7 @@
   align-items: center;
 
   height: min-content;
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .MedalIcon {
